--- a/VoxelSim/imgui.ini
+++ b/VoxelSim/imgui.ini
@@ -19,19 +19,27 @@ Size=353,534
 Collapsed=0
 
 [Window][Settings]
-Pos=1407,26
-Size=193,874
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Viewport]
-Pos=0,26
-Size=1405,874
+Pos=919,26
+Size=681,874
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Viewport]
+Pos=0,26
+Size=917,874
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Scene]
+Pos=850,458
+Size=750,442
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=34,83 Size=1600,874 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=1405,874 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-  DockNode  ID=0x00000005 Parent=0xF2944C7F SizeRef=193,874 HiddenTabBar=1 Selected=0x54723243
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=122,156 Size=1600,874 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0xF2944C7F SizeRef=917,876 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0xF2944C7F SizeRef=681,876 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=697,430 Selected=0x54723243
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=697,442 Selected=0xE192E354
 
